tests/type-errors/invalid_instruction_fun_assign.arl
archetype invalid_instruction_fun_assign

variable res : nat = 0

asset my_asset {
  a : nat;
  b : string;
}

function f() : unit {
  var x = 0;
  x := 0;
  res := 2;
  return Unit
}

entry exec () {
  var x = 0;
  x := 0;
  res := 2;
  const u = f()
}
